--- a/src/components/navbar/style.css
+++ b/src/components/navbar/style.css
@@ -1,9 +1,9 @@
 .logo {
-  width: 25%;
+  width: 5%;
 }
 
 .nav-theme {
-  background-color: #101018f8;
+  background-color: darkblue;
   font-size: 20px;
 }
 
